@@ -32,6 +32,7 @@ Project Leader / Developer:
 - immerrr <immerrr@gmail.com>
 - Cédric Krier
 - Phil Jones
+- Michael Hunsinger
 
 Contributors of code for werkzeug/examples are:
 
